--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "is-url": "^1.2.4",
     "mongodb": "^3.0.0",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "pug": "^3.0.2"
   },
   "license": "MIT"
 }
